src/styles/_overrides.scss
//---------------------------------------
// Breadcrumb
//---------------------------------------
.page-content .bx--breadcrumb .bx--link {
  font-size: 0.875rem;
}

//---------------------------------------
// Link
//---------------------------------------

.component-example .bx--link {
  font-size: 0.875rem;
}

//---------------------------------------
// Button
//---------------------------------------

.component-example .button .bx--btn {
  margin: $spacing-03;
}

//---------------------------------------
// Notification
//---------------------------------------

.component-example__live.component-example__live--notification
  .component-example__live--rendered
  > div {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.component-example .bx--inline-notification {
  display: inline-flex;
}

//---------------------------------------
// Loading
//---------------------------------------

.component-example .loading .bx--loading-overlay {
  position: absolute;
}

//---------------------------------------
// Date Picker
//---------------------------------------

// TODO

//---------------------------------------
// Form
//---------------------------------------

.component-example__live .bx--form-item,
.component-example .bx--form-item {
  margin-bottom: $spacing-07;
}

.component-example .bx--form-item.bx--checkbox-wrapper {
  margin-bottom: $spacing-03;
}

//---------------------------------------
// Tabs
//---------------------------------------

.component-example__live--tabs .bx--tabs__nav {
  position: static;
}

.component-example__live .tabs .bx--tabs + div {
  margin-top: $spacing-07;
}

//---------------------------------------
// Tile
//---------------------------------------

.component-example__live--tile .bx--grid {
  outline: 1px dashed #97c1ff;
}

.component-example__live--tile .bx--tile-container .bx--col {
  background: none;
  margin-bottom: $spacing-05;
}

//---------------------------------------
// Date picker
//---------------------------------------

.component-example .flatpickr-calendar {
  margin-left: -1rem;
  margin-top: -1rem;
}

//---------------------------------------
// Tooltip
//---------------------------------------

.component-example__live .bx--tooltip {
  margin-left: -1rem;
  margin-top: -0.5rem;
}

.component-example .bx--tooltip__label {
  margin: 0 $spacing-05;
}

.component-example .bx--tooltip--definition {
  margin: $spacing-05 0;
}

//---------------------------------------
// Modal
//---------------------------------------

.component-example__live.component-example__live--modal .bx--modal {
  z-index: 10000;
}

//---------------------------------------
// Progress Indicator
//---------------------------------------

.component-example__live .bx--progress .bx--tooltip {
  margin-left: 1.375rem;
  margin-top: 2.5rem;
}

